@@ -139,6 +139,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - tmpMsg is drawn from GameEngine::drawOverlays()
   - logo, version and stats are drawn in MainMenu::drawOverlay()
 **** TODO Start to handle Local test
+     CLOCK: [2017-03-09 jeu. 18:24]--[2017-03-09 jeu. 18:50] =>  0:26
      CLOCK: [2017-03-09 jeu. 18:05]--[2017-03-09 jeu. 18:22] =>  0:17
      CLOCK: [2017-03-09 jeu. 16:44]--[2017-03-09 jeu. 17:07] =>  0:23
      CLOCK: [2017-03-09 jeu. 15:43]--[2017-03-09 jeu. 16:20] =>  0:37
@@ -149,9 +150,11 @@ Error is fixed, was due to a src/services/Services.hpp old code
     Must have a title and a step text
   - [X] Instanciate and show it when MainMenu's LocalTest button is clicked
   - [X] May create unit tests
-  - [ ] Must create the layout file 
-  - [ ] Show the layout file in LoadingBar::init()
-  - [ ] get the progress and title text pointer
+  - [X] Must create the layout file 
+  - [X] Show the layout file in LoadingBar::init()
+  - [ ] Fix the layout file
+  - [ ] get the progressbar and title text pointer
+    then set them to the actual values
 - [ ] Create a real GameState
   - [ ] Work on the MainMenu LocalTest transition
     - [ ] destroy MainMenu
