@@ -1,5 +1,10 @@
 2017-03-09  Jérôme Pasquier  <rainbru@free.fr>
 
+	* media/layouts/loading_bar.layout: add the LoadingBar layout file.
+
+	* src/client/LoadingBar_Test.cpp (vectorSize): add a unit test to
+	LoadingBar.
+
 	* src/client/LoadingBar.cpp (LoadingBar): create an empty class.
 
 	* ROADMAP: postpone overlays in highter resolution bug.
